# pxfm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml
app/: Cargo.toml
app/benches/atrigo/: main.rs
app/benches/bessel/: main.rs
app/benches/erf/: main.rs
app/benches/exp/: main.rs
app/benches/gamma/: main.rs
app/benches/hyperbolic/: main.rs
app/benches/log/: main.rs
app/benches/math/: main.rs
app/benches/power/: main.rs
app/benches/roots/: main.rs
app/benches/triangle/: main.rs
app/benches/trigo/: main.rs
app/src/: main.rs
bessel/: Cargo.toml  besselk.py  inverf.py
bessel/src/: lib.rs
fuzz/: Cargo.toml
fuzz/accuracy_dp/: accuracy_dp.rs
fuzz/accuracy_sp/: accuracy_sp.rs
fuzz/math/: math.rs
notes/: Bessel_j1_taylor.ipynb  bessel_i0.ipynb  bessel_j0_asympt.ipynb  bessel_j0_taylor.ipynb  bessel_j1_asympt.ipynb  bessel_y0_taylor.ipynb  bessel_y1_taylor.ipynb  cbrt.sollya  cos_tiny.sollya  cos_tiny_dd.sollya  cospi.sollya  cospif_0p25.sollya  dd_log1p_fast.sollya  exp2m1f.sollya  expm1f.sollya  inv_cbrt.sollya  log10pf.sollya  log10pf_core.sollya  log2p1f.sollya  log2p1f_core.sollya  logisticf.sollya  r_erf.sollya  sec.ipynb  sin.sollya  sin_cos_pi64.sollya  sin_tiny.sollya  sin_tiny_dd.sollya  sinpi_zero_fast_dd.sollya  sqrt1pm1.sollya  sqrt1pm1_dd.sollya  sqrt1pm1f.sollya  tan.sollya  tan_dd.sollya  tan_tiny.sollya  tan_tiny_dd.sollya  tanpif.sollya  y0_log.sollya
notes/bessel_sollya/: bessel_i0.sollya  bessel_i0_approximant.sollya  bessel_i0_big.sollya  bessel_i0_small.sollya  bessel_i0_small_first_pass.sollya  bessel_i0_small_first_pass_rational.sollya  bessel_i0f_small.sollya  bessel_j1f_small.sollya  bessel_k1f_small2.sollya  bessel_y0f_small.sollya  library.c  library.h
proof/: Compound.ipynb  Erff.ipynb  Log2p1.ipynb  Sinc_f64.ipynb  Sincos.ipynb  log1p_tiny.sollya  sincf.sollya
src/: acos.rs  acosf.rs  acosh.rs  acoshf.rs  acospi.rs  acospi_table.rs  acospif.rs  asin.rs  asin_eval_dyadic.rs  asin_eval_rational.rs  asinf.rs  asinh.rs  asinhf.rs  asinpi.rs  asinpif.rs  atan.rs  atan2.rs  atan2f.rs  atan2pi.rs  atan2pif.rs  atanf.rs  atanh.rs  atanhf.rs  atanpi.rs  atanpif.rs  bits.rs  cbrt.rs  cbrtf.rs  common.rs  compound.rs  compound_m1.rs  compound_m1f.rs  compoundf.rs  compoundm1f.rs  cosf.rs  cosh.rs  coshf.rs  cot.rs  cotf.rs  csc.rs  (+86 more)
src/bessel/: alpha0.rs  alpha1.rs  bessel_exp.rs  beta0.rs  beta1.rs  i0.rs  i0e.rs  i0ef.rs  i0f.rs  i1.rs  i1e.rs  i1ef.rs  i1f.rs  i2.rs  i2f.rs  j0.rs  j0_coeffs.rs  j0_coeffs_dyadic_remez.rs  j0_coeffs_dyadic_taylor.rs  j0_dyadic_zeros.rs  j0f.rs  j1.rs  j1_coeffs.rs  j1_remez_dyadic_coeffs.rs  j1_taylor_dyadic_coeffs.rs  j1_zeros_dyadic.rs  j1f.rs  j1f_coeffs.rs  jincpi.rs  jincpif.rs  k0.rs  k0e.rs  k0ef.rs  k0f.rs  k1.rs  k1e.rs  k1f.rs  k2f.rs  mod.rs  y0.rs  (+15 more)
(+121 files in other folders)
