workspace = { members = ["app", "fuzz"] }

[package]
name = "pxfm"
version = "0.1.6"
edition = "2024"
documentation = "https://github.com/awxkee/pxfm"
keywords = ["libm", "math"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
readme = "README.md"
repository = "https://github.com/awxkee/pxfm"
rust-version = "1.85"
categories = ["mathematics"]
description = "Fast and accurate math"

[dependencies]
num-traits = "0.2"
