[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
pxfm = {path = "../", features = []}
rayon = "1.10.0"
rug = "1.27.0"
zbessel-rs = "0.1"
num-complex = "^0.4"
bessel = {path = "../bessel"}

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
libm = "0.2"


[[bench]]
name = "math"
harness = false
