[package]
name = "pxfm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rug = "1.27"
bessel = { path = "../bessel" }

[dependencies.pxfm]
path = ".."

[[bin]]
name = "math"
path = "math/math.rs"
test = false
doc = false
bench = false

[[bin]]
name = "accuracy_sp"
path = "accuracy_sp/accuracy_sp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "accuracy_dp"
path = "accuracy_dp/accuracy_dp.rs"
test = false
doc = false
bench = false